--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,11 +13,16 @@ body{
             margin-top: 8vh;
             .row-koop-nu{
                 height: 92vh;
-                position: relative;
-                .eiland{
-                    position: absolute;
-                    top: 100px;
-                    width: 35%;
+                @media only screen and (max-width: 768px){
+                    height: auto;
+                }
+                .col-koop-nu-foto{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .eiland{
+                    margin-top: 100px;
+                    width: 90%;
                     z-index: -1;
                     animation: zweef 6s ease-in-out infinite;
                     transform: translatey(0px);
@@ -33,11 +38,12 @@ body{
                         }
                     }
                 }
-                .col-koop-nu-foto{
-                    img{
+                    .replaceimage{
+                        width: 75%;
                     }
                 }
                 .col-koop-nu-info{
+                    position: relative;
                     div{
                         h1{
                         }
@@ -46,19 +52,28 @@ body{
                         }
                     }
                     .sun{
+                        position: absolute;
                         z-index: -1;
                         top: -200px;
                         left: 450px;
+                        @media only screen and (max-width: 768px){
+                            display: none;
+                        }
                     }
                 }
             }
             .row-specs{
                 flex-wrap: nowrap;
                 height: 92vh;
+                @media only screen and (max-width: 768px){
+                    height: auto;
+                }
                 .row-specs-title{
                     height: 15%;
                     h1{
-                        
+                        @media only screen and (max-width: 576px){
+                            font-size: $headerFontSize;
+                        }
                     }
                 }
                 .row-specs-content{
@@ -66,8 +81,7 @@ body{
                     position: relative;
                     div{
                       img{
-                        max-width: 58%;
-                        height: auto;
+                          max-width: 75%;
                       }
                     }
                     .cloud1{
@@ -88,6 +102,9 @@ body{
             }
             .row-myping{
                 height: 92vh;
+                @media only screen and (max-width: 768px){
+                    height: auto;
+                }
                 .row-myping-mockup{
                     position: relative;
                     .mockup1{
@@ -105,6 +122,7 @@ body{
                     height: 100%;
                     display: flex;
                     align-items: flex-end;
+                    position: relative;
                     .row-myping-info-box{
                         height: 60vh;
                         display: flex;
@@ -112,6 +130,9 @@ body{
                         justify-content: space-between;
                         div{
                             h1{
+                                @media only screen and (max-width: 576px){
+                                    font-size: $headerFontSize;
+                                }
                             }
                             p{
                             }
@@ -131,8 +152,14 @@ body{
             }
             .row-overping{
                 height: 92vh;
+                @media only screen and (max-width: 768px){
+                    height: auto;
+                }
                 .row-overping-titel{
                     h1{
+                        @media only screen and (max-width: 576px){
+                            font-size: $headerFontSize;
+                        }
                     }
                 }
                 .row-overping-tekstblokken{
@@ -140,7 +167,6 @@ body{
                         h4{
                           font-family: $bodyFont;
                           font-weight: 600;
-                          margin-bottom: 3rem;
                         }
                         p{
                         }
@@ -158,16 +184,7 @@ body{
             }
         }
         .footer-image{
-            position: relative;
-            height: 150vh;
             .fotos{
-                bottom: 0;
-                height: 100%;
-                width: 100%;
-                position: absolute;
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 &#bovenlqqg{
                 }
                 &#mountain{
