--- a/scss/product.scss
+++ b/scss/product.scss
@@ -3,11 +3,12 @@
 
 *{
     @extend %opmaak;
-    background-color: #DEEFED;
 }
 body{
+  background-color: #DEEFED;
   .fullpage{
     @extend %navigation;
+    
       .container{
         margin-top: 30vh;
         .row-specs{
@@ -25,8 +26,9 @@ body{
           }
         }
         .btn-koopnu{
-          margin-top: 200px;
-            
+          .koopnu{
+            margin-left: 1vh;
+            }
           }
         }
       }
@@ -36,15 +38,52 @@ body{
       .cloud5{
         position: absolute;
         width: 100%;
+       
       }
       .cloud6{
         position: absolute;
         width: 100%;
         top:200px;
+        
+        
+      }
+      .bandje{
+        position: absolute;
+        width: 100%;
+        margin-left: 350px;
+        margin-top: -100px;
+        
       }
 
     }
+    .titel-tecs{}
+    .row-tecs{
+      .row{
+        .blok1{
+          width: 260px;
+          height: 64px;
+          background-color:#2EC4B6;
+          color: #fff;
+          text-align: center;
+          border: 2 solid #2EC4B6;
+          border-radius: 5px;
+          margin: 15px;
+          text-transform:uppercase;
+          padding-top: 18px;
+      }
+      .blok2{
+        width: 1088px;
+        height: 64px;
+        background-color: #fff;
+        color: #011627;
+        border-radius: 5px;
+        margin: 15px;
+        padding-top: 18px;
+        padding-left: 80px;
+      }
+      }
+    }
     
 }
-  @extend %footer;
-}
+  
+
