--- a/scss/product.scss
+++ b/scss/product.scss
@@ -8,21 +8,20 @@ body{
   background-color: #DEEFED;
   .fullpage{
     @extend %navigation;
-    
       .container{
-        margin-top: 30vh;
+        margin-top: 26vh;
         .row-specs{
           .linkerkolom{
             .titel-spec{
                .specificaties{
                  color: #011627;
                }
-                }   
-                 }
+              } 
         .tekst{
-          margin-top: 2vh;
+          margin-top: 4vh;
           p{
             padding: 1vh;
+            margin-bottom: 4vh;
           }
         }
         .btn-koopnu{
@@ -31,31 +30,38 @@ body{
             }
           }
         }
+        .rechterkolom{
+          .cloud6{
+            position: absolute;
+            width: 100%;
+            margin-left: 100px;
+            margin-top: 100px;
+           
+          }
+          .cloud7{
+            position: absolute;
+            width: 100%;
+            top:300px;
+            left: 200px;
+            
+            
+          }
+          .bandje{
+            position: absolute;
+            width: 100%;
+            left: 350px;
+            
+          }
+    
+        }
       }
     }
-    .rechterkolom{
+    .titel-tecs{}
       .cloud5{
         position: absolute;
         width: 100%;
-       
+        z-index: -1;
       }
-      .cloud6{
-        position: absolute;
-        width: 100%;
-        top:200px;
-        
-        
-      }
-      .bandje{
-        position: absolute;
-        width: 100%;
-        margin-left: 350px;
-        margin-top: -100px;
-        
-      }
-
-    }
-    .titel-tecs{}
     .row-tecs{
       .row{
         .blok1{
@@ -86,3 +92,4 @@ body{
 }
   
 
+}
